Fix side nav z-index on small screens

--- a/src/styles/variables/_navigation.scss
+++ b/src/styles/variables/_navigation.scss
@@ -1,6 +1,6 @@
 // Z index variables
-$zindex-sidenav: 1045 !default;
-$zindex-topnav: 1050 !default;
+$zindex-sidenav: 1052 !default;
+$zindex-topnav: 1053 !default;
 
 // Color variables for the sidenav
 
@@ -8,10 +8,11 @@ $zindex-topnav: 1050 !default;
 $sidenav-dark-bg: $gray-900;
 $sidenav-dark-color: fade-out($white, 0.5);
 $sidenav-dark-heading-color: fade-out($white, 0.75);
-$sidenav-dark-link-color: fade-out($white, 0.5);
+$sidenav-dark-link-color: fade-out($white, 0.35);
 $sidenav-dark-link-active-color: $white;
 $sidenav-dark-icon-color: fade-out($white, 0.75);
 $sidenav-dark-footer-bg: $gray-800;
 
 // Color variables for the topnav
-$topnav-dark-toggler-color: fade-out($white, 0.5);
+$topnav-dark-toggler-color: fade-out($white, 0.35);
+$topnav-dark-link-color: fade-out($white, 0.35);
